# Hello_Jenkins

./: CMakeLists.txt  main-test.cpp
